# ipmanager-django

./: .gitignore  .gitmodules  Dockerfile  README.md  RubyERDiagram.md  compose.yaml  env_example  groups.csv  ip_ranges.csv  ipmanager_fixture.json  pyproject.toml  relations.csv
base/: configmap.yaml  db-backup.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  service.yaml  statefulset.yaml
base 2/: configmap.yaml  deployment.yaml  kustomization.yaml  networkpolicy.yaml
base 3/: db-backup.yaml  ingress.yaml  service.yaml  statefulset.yaml
docs/: DevelopmentEnvironmentLocal.md  DockerComposeLocal.md  api-description.md  django-model.md  ip-containment-doc.md  rails-model.md
src/: main.py  manage.py
src/ipmanager/: asgi.py  server.py  settings.py  urls.py  wsgi.py
src/ipmanager/api/: admin.py  apps.py  models.py  views.py
src/ipmanager/api/management/commands/: makefixture.py
src/ipmanager/api/migrations/: 0001_initial.py  0002_alter_iprange_value.py  0003_note.py  0004_split_notes.py  0005_remove_group_notes.py  0006_alter_note_created.py  0006_department_department_group_department_users.py
src/ipmanager/core/: apps.py  cidr.py
src/ipmanager/ui/: apps.py  auth.py  forms.py  urls.py  views.py
src/ipmanager/ui/static/ui/: ui.css
src/ipmanager/ui/templates/ui/: add_ip_range_form.html  add_note_form.html  base.html  create_relation_form.html  edit_group.html  groupListView.html  group_list_view.html  index.html  inline_relation_form.html  login_required.html  new_group.html  related_group_list_rows.html  related_groups.html  single_group_view.html  test_ip_form.html
tests/: conftest.py  test_api_check.py  test_api_group_key_view.py  test_api_groups_view.py  test_contains.py  test_model_group.py  test_model_iprange.py  test_model_relation.py
