[project]
name = "ipmanager-django"
description = "Stand-alone IP Manager Service (Django implementation)"
authors = [
    { name="University of Maryland Libraries", email="lib-ssdr@umd.edu" },
    { name="Peter Eichman", email="peichman@umd.edu" },
    { name="Erik Jones", email="ejones99@umd.edu" },
    # 2025 Sprinterns
    { name="Neola Dsouza", email="nldsouza@umd.edu" },
    { name="Aatish Gupta", email="aatish@umd.edu" },
    { name="Mackenzie Kilgore", email="mkilgore@umd.edu" },
    { name="Dorian Mkam", email="dmkam@umd.edu" },
    # 2026 Sprinterns
    { name="Akyra Alston", email="aalstron6@umd.edu" },
    { name="Malaika Asif", email="masif@umd.edu" },
    { name="Hannah Gorski", email="hggorski@umd.edu" },
    { name="Aanchal Puri", email="aanchal@umd.edu" },
]
version = "1.0.0-rc1"
dependencies = [
    "binarytree~=6.5",
    "click~=8.1",
    "django~=5.2.9",
    "django-umd-lib-style~=1.2",
    "django-extensions~=4.1",
    "django-environ~=0.12",
    "django-health-check~=3.20",
    "djangosaml2~=1.11",
    "psutil~=7.2",
    "urlobject~=3.0.0",
    "waitress~=3.0",
    "whitenoise~=6.9"
]

[dependency-groups]
test = [
    "pytest~=9.0",
    "pytest-django~=4.11",
    "ruff~=0.14",
]
prod = [
    "psycopg[binary]"
]

[project.scripts]
ipmanager = "ipmanager.server:run"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ipmanager.settings"
filterwarnings = [
    # these warnings are coming from third-party code
    "ignore:pkg_resources is deprecated as an API.:DeprecationWarning",
]

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"
exclude = ["manage.py"]
